src/interpreter/snapshots/rlox__interpreter__tests__interpreter@variable__collide_with_parameter.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/variable/collide_with_parameter.lox
---
Resolver error(s):
[ line 2 ] : Already a variable with this name in this scope.
