src/interpreter/snapshots/rlox__interpreter__tests__interpreter@variable__duplicate_local.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/variable/duplicate_local.lox
---
Resolver error(s):
[ line 3 ] : Already a variable with this name in this scope.
