src/interpreter/snapshots/rlox__interpreter__tests__interpreter@variable__early_bound.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/variable/early_bound.lox
---
outer
outer
