src/interpreter/snapshots/rlox__interpreter__tests__interpreter@variable__in_middle_of_block.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/variable/in_middle_of_block.lox
---
a
a b
a c
a b d
