src/interpreter/snapshots/rlox__interpreter__tests__interpreter@variable__in_nested_block.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/variable/in_nested_block.lox
---
outer
