src/interpreter/snapshots/rlox__interpreter__tests__interpreter@variable__redeclare_global.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/variable/redeclare_global.lox
---
nil
