src/interpreter/snapshots/rlox__interpreter__tests__interpreter@variable__redefine_global.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/variable/redefine_global.lox
---
2
