src/interpreter/snapshots/rlox__interpreter__tests__interpreter@variable__scope_reuse_in_different_blocks.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/variable/scope_reuse_in_different_blocks.lox
---
first
second
