src/interpreter/snapshots/rlox__interpreter__tests__interpreter@variable__shadow_and_local.lox.snap
---
source: src/interpreter/mod.rs
expression: out_str
input_file: test_programs/interpreter/variable/shadow_and_local.lox
---
outer
inner
